# webgrid_eval

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: google.yaml  google_30x30.yaml  google_ai_studio.yaml  local.yaml  openrouter.yaml  openrouter_free.yaml  openrouter_free_test.yaml  qwen_4x4.yaml  qwen_only.yaml  test_512.yaml
tests/: test_game_state.py  test_integration.py  test_main.py  test_screenshot.py  test_tools.py
webgrid_eval/: __init__.py  fetch_models.py  game_state.py  main.py  make_gif.py  openrouter.py  run_eval.py  screenshot.py  tools.py
